# Projects

./: .gitignore
.github/workflows/: pmd.yml
Algorithms/: CMakeLists.txt  CMakePresets.json
Algorithms/Algorithms/: Algorithms.c  Algorithms.h  CMakeLists.txt  Common.c  Common.h  Sorting.c  Sorting.h
bplm/: .gitignore  creds.txt  metadata.py  metadata.xml  metadata_test.py  package-lock.json  package.xml  requirements.txt  run.sh  sfdx-project.json  w.txt
bplm/.github/workflows/: pmd.yml
bplm/scripts/apex/: hello.apex
bplm/scripts/soql/: account.soql
bplm/sfdx-src/main/default/appMenus/: AppSwitcher.appMenu-meta.xml
bplm/sfdx-src/main/default/applications/: BPLM.app-meta.xml
bplm/sfdx-src/main/default/classes/: BPLM_Model.cls  BPLM_SchemaFactory.cls  BPLM_SchemaFactoryTest.cls  BPLM_SchemaRepository.cls  BPLM_SchemaRepositoryTest.cls  BPLM_SchemaTransformer.cls  BPLM_TestDataFactory.cls
bplm/sfdx-src/main/default/connectedApps/: mRadar.connectedApp-meta.xml
bplm/sfdx-src/main/default/contentassets/: Screenshot_20230520_234757.asset  Screenshot_20230520_234757.asset-meta.xml  X11.asset  X11.asset-meta.xml
bplm/sfdx-src/main/default/customMetadata/: Business_Process_Config.Business_Process.md-meta.xml
bplm/sfdx-src/main/default/flexipages/: BPLM_UtilityBar.flexipage-meta.xml  Business_Process_Record_Page.flexipage-meta.xml  Business_Process_Stage_Record_Page.flexipage-meta.xml  Home_Page_Default.flexipage-meta.xml
bplm/sfdx-src/main/default/globalValueSets/: Activity_Assigned_To_Type.globalValueSet-meta.xml  Activity_Type.globalValueSet-meta.xml  (+5 more)
(+100 files in other folders)
